# qua-flat-function-object

./: CMakeLists.txt  README.md  opcua_function_object.cpp  opcua_function_object.h
